--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -4,6 +4,7 @@
   max-width: 100vw;
   display: grid;
   grid-template-columns: repeat(auto-fill, 275px);
+  grid-gap: 550px 20px;
   justify-content: space-between;
   min-height: 100%;
 }
