value on input set up

--- a/src/components/CardBack/CardBack.module.scss
+++ b/src/components/CardBack/CardBack.module.scss
@@ -2,7 +2,7 @@
 
 .cardBack {
   // border: solid 2px $tertiary-color-transparent;
-  box-shadow: 2px 2px $tertiary-color-transparent;
+  // box-shadow: 2px 2px $primary-color-transparent;
   border-radius: 10px;
   height: 500px;
   display: flex;
