--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -5,7 +5,10 @@
   color: $main-white;
   width: 30%;
   padding: 20px;
-  max-height: 100%;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  z-index: 100;
 
   h1 {
     font-size: 36px;
