--- a/src/components/CardList/CardList.module.scss
+++ b/src/components/CardList/CardList.module.scss
@@ -1,14 +1,10 @@
 @import "../../variables.scss";
 
 .cards {
-  max-width: 100vw;
+  max-width: 90vw;
   display: grid;
   grid-template-columns: repeat(auto-fill, 275px);
-  grid-gap: 550px 20px;
-  justify-content: space-between;
-  min-height: 100%;
-
-}
-
-@media only screen and (min-width: 768px) {
+  grid-gap: 550px 5px;
+  justify-content: space-evenly;
+  height: 100%;
 }
