--- a/src/components/SearchButtons/SearchButtons.module.scss
+++ b/src/components/SearchButtons/SearchButtons.module.scss
@@ -1,29 +1,41 @@
 @import "../../variables.scss";
 
-.searchButtonsContainer {
+.radioButtons__container {
   display: flex;
   flex-direction: column;
   color: $main-white;
   margin-top: 20px;
-  font-size: 10px;
+  font-size: 12px;
+  width: 72%;
 
-  .highAbv {
+  .radioButtons__highAbv {
     background-color: $primary-color;
-    margin: 5px;
+    margin: 5px 0px;
     border-radius: 10px;
   }
 
-  .classic {
+  .radioButtons__highAbv:hover {
+    background-color: $primary-colour-monochromatic;
+  }
+
+  .radioButtons__classic {
     background-color: $primary-color;
-    margin: 5px;
+    margin: 5px 0px;
     border-radius: 10px;
   }
 
-  .acidic {
-    background-color: $primary-color;
-    margin: 5px;
-    border-radius: 10px;
+  .radioButtons__classic:hover {
+    background-color: $primary-colour-monochromatic;
+  }
 
+  .radioButtons__acidic {
+    background-color: $primary-color;
+    margin: 5px 0px;
+    border-radius: 10px;
+  }
+
+  .radioButtons__acidic:hover {
+    background-color: $primary-colour-monochromatic;
   }
 
   input {
@@ -32,7 +44,10 @@
 
   label {
     font-size: larger;
-    // background-color: $primary-color;
     padding: 2px;
+
+    :hover {
+      background-color: #27ab81;
+    }
   }
 }
