--- a/src/variables.scss
+++ b/src/variables.scss
@@ -8,6 +8,9 @@ $primary-color-transparent: rgba(51, 209, 159, 0.85);
 $secondary-color-transparent: rgba(245, 245, 245, 0.85);
 $tertiary-color-transparent: rgba(18, 18, 18, 0.85);
 
+$primary-colour-monochromatic: #27ab81;
+$secondary-color-monochromatic: #dcdcdc;
+
 %card {
   height: 100%;
   width: 100%;
