--- a/src/components/CardBack/CardBack.module.scss
+++ b/src/components/CardBack/CardBack.module.scss
@@ -1,20 +1,19 @@
 @import "../../variables.scss";
 
-.cardBack {
-  // border: solid 2px $tertiary-color-transparent;
-  // box-shadow: 2px 2px $primary-color-transparent;
+.cardBack__container {
+  border: solid 2px $primary-color-transparent;
   border-radius: 10px;
   height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
-  background-image: url("../../assets/beer-g7f8e29a9b_1920.jpg");
-  background-size: 100% 100%;
-  margin: 5px;
+  // background-image: url("../../assets/beer-g7f8e29a9b_1920.jpg");
+  // background-size: 100% 100%;
+  margin: 10px;
   padding: 5px;
 
-  .textArea {
+  .cardBack__textArea {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,12 +23,12 @@
     border-radius: 10px;
     height: 100%;
 
-    .iconBeer {
+    .cardBack__iconBeer {
       display: flex;
       font-size: 30px;
     }
 
-    .descriptionArea {
+    .cardBack__descriptionArea {
       height: 50%;
       overflow: scroll;
       overflow-x: hidden;
@@ -54,26 +53,33 @@
         background-color: $primary-color;
       }
 
-      .descriptionOpener {
+      .cardBack__descriptionOpener {
         font-weight: bold;
         text-align: center;
       }
 
-      .description {
+      .cardBack__description {
         text-align: center;
       }
     }
 
-    .foodArea {
+    .cardBack__foodArea {
       height: 30%;
       padding: 5px;
 
-      .iconFood {
+      .cardBack__foorPairingHeader {
+        font-weight: bold;
+        text-align: center;
+      }
+
+      .cardBack__iconFood {
+        display: flex;
+        justify-content: center;
         align-items: center;
         font-size: 30px;
       }
 
-      .foodPairingInfo {
+      .cardBack__foodPairingInfo {
         text-align: center;
         font-style: italic;
       }
