--- a/src/components/SideNav/SideNav.module.scss
+++ b/src/components/SideNav/SideNav.module.scss
@@ -1,6 +1,8 @@
 @import "../../variables.scss";
 
 .sideNav__container {
+  display: flex;
+  flex-direction: column;
   background-color: $tertiary-color;
   color: $main-white;
   width: 30%;
@@ -20,5 +22,9 @@
 
   .sideNav__filterbuttons {
     margin: 50px;
+  }
+
+  .sideNav__footer {
+    margin-top: auto;
   }
 }
